tests/parser-test-files/bad-files/parse-the.1.error
error: Malformed the expression
  --> test:4:14
   |
 4 |  (define x (the))
   |                ^ expected type
